Development Portal (2014-06-17 shi)
==============================
Added column headers for data tables


Development Portal (2014-06-12 shi)
==============================
Dashboard changes
Cleaned up css duplicates


Development Portal (2014-05-30 shi)
==============================
About data sections restyled
About data sections translated


Development Portal (2014-05-28 shi)
==============================
CSS cleanup
Fixed hover tips
New about page text


Development Portal (2014-05-27 shi)
==============================
Dashboard design


Development Portal (2014-04-18 shi)
==============================
Removed alert pre-alpha


Development Portal (2014-04-16 shi)
==============================
Refactoring table styles
Added new date class for activity table


Development Portal (2014-04-12 shi)
==============================
Fixed map height for High Vis flava
Alphabetised countries


Development Portal (2014-04-11 shi)
==============================
Added new text to descriptions
Added new text to data quality page
Added links in footer to data quality page
Added new text to Donors and Sectors pages
Added translations for new text


Development Portal (2014-04-10 shi)
==============================
Fixed translations for tongue dropdown
Fixed tables from expanding beyond width
Replaced headers in tables to compensate donor name length
Added new map view page


Development Portal (2014-04-08 shi)
==============================
No borders for last row in lists
Added translations for tongue dropdown
Added All Activities and All Publishers pages
Added Missing Projects page
Added Missing Projects icon
Minor changes in about page
Added currency to columns


Development Portal (2014-04-07 shi)
==============================
Show multiple countries for SAVi and percentages
Add numbers to lists in SAVi for easy referencing
Renamed Agents to Publishers / Source to Donor
Added High Visibility mode for all views and SAVi


Development Portal (2014-04-04 shi)