@@ -1,3 +1,8 @@
+Development Portal (2014-06-18 shi)
+==============================
+More columns for dashboard, css layouts
+
+
 Development Portal (2014-06-17 shi)
 ==============================
 Added column headers for data tables
